--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3-column-preview-card-component</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
       <section>
         <!-- card-1 -->
         <div class="cards" id="card-1">
-          <img src="./Assets/icon-sedans.svg" alt="sedan-car-image" />
+          <img src="Assets/icon-sedans.svg" alt="sedan-car-image" />
           <h2>SEDANS</h2>
           <p>
             Choose a sedan for its affordability and excellent fuel economy.
@@ -21,7 +21,7 @@
         </div>
         <!-- card-2 -->
         <div class="cards" id="card-2">
-          <img src="/Assets/icon-suvs.svg" alt="suv-car-img" />
+          <img src="Assets/icon-suvs.svg" alt="suv-car-img" />
           <h2>SUV</h2>
           <p>
             Take an suv for its spacious interior, power and versatility.
@@ -31,7 +31,7 @@
         </div>
         <!-- card-3 -->
         <div class="cards" id="card-3">
-          <img src="/Assets/icon-luxury.svg" alt="luxury-car-img" />
+          <img src="Assets/icon-luxury.svg" alt="luxury-car-img" />
           <h2>LUXURY</h2>
           <p>
             Cruise in the best car brands without the bloated process. Enjoy the
